infrastructure/istio-gateway/overlays/local/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: public-gateway-config
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: havenplus-local-tls
          kind: Secret
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
  - name: tls-passthrough
    port: 443
    tls:
      mode: Passthrough
    protocol: TLS
    allowedRoutes:
      kinds:
        - kind: TLSRoute
      namespaces:
        from: All
